Added duplicate checks

--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
         </div>
 
         <ul id="item-list" class="items">
-            <li class="lst-item">
-                Apples
+            <!-- <li class="lst-item">Apples
                 <button class="remove-item btn-link text-red">
                     <i class="fa-solid fa-xmark"></i>
                 </button>
-            </li>
-            <li class="lst-item">
+            </li> -->
+            <!-- <li class="lst-item">
                 Orange Juice
                 <button class="remove-item btn-link text-red">
                     <i class="fa-solid fa-xmark"></i>
@@ -59,7 +58,7 @@
                 <button class="remove-item btn-link text-red">
                     <i class="fa-solid fa-xmark"></i>
                 </button>
-            </li>
+            </li> -->
         </ul>
 
         <button id="clear" class="btn-clear">Clear All</button>
